--- a/public/index.html
+++ b/public/index.html
@@ -34,8 +34,8 @@
 				<section id='fullscreen-content'>
 					<div class='federation-logo'></div>
 					<div style='margin-bottom: 80px;'>
-						<h1>LCARS Computer Network</h1>
-						<h3 style='margin-top: 20px' class='color6'>Authorized access only</h3>
+						<h1>Incoming Transmission</h1>
+						<h3 style='margin-top: 20px' class='color6'>Starfleet Command &#8226; Authorized access only</h3>
 					</div>
 				</section>
 
